Incorrect window placement with respect to mouse cursor during move
Hi,
Starting with a maximized window, if I try to move it to another screen by clicking on the middle of the headerbar and dragging it, the window is quickly moved to a wrong position with respect to the mouse cursor position. The window is positioned to the bottom right of the cursor position, instead of being almost centered horizontally with respect to cursor position.
This is shown in this video:
Capture_d_écran_vidéo_de_30-03-2021_08_59_15
This is with gnome-shell 40 using fedora 34 beta.
Edited by Emmanuel Pacaud